// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Form Default 1`] = `
<div
  className="root"
>
  <div
    className="root"
    title="Name"
  >
    <input
      className="field"
      disabled={false}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value=""
    />
  </div>
  <div
    className="root"
    title="Salary"
  >
    <input
      className="field"
      disabled={false}
      onChange={[Function]}
      placeholder="Salary"
      type="text"
      value=""
    />
  </div>
  <div
    className="root"
    title="Age"
  >
    <input
      className="field"
      disabled={false}
      onChange={[Function]}
      placeholder="Age"
      type="text"
      value=""
    />
  </div>
  <button
    className="root disabled"
    disabled={true}
    onClick={[Function]}
  >
    Submit
  </button>
</div>
`;

exports[`Storyshots Form Invalid 1`] = `
<div
  className="root"
>
  <div
    className="root"
    title="Name"
  >
    <input
      className="field"
      disabled={false}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value=""
    />
  </div>
  <div
    className="root"
    title="Salary"
  >
    <input
      className="field"
      disabled={false}
      onChange={[Function]}
      placeholder="Salary"
      type="text"
      value=""
    />
  </div>
  <div
    className="root"
    title="Age"
  >
    <input
      className="field error"
      disabled={false}
      onChange={[Function]}
      placeholder="Age"
      type="text"
      value={-30}
    />
    <div
      className="validationAlert"
      title="Validation error"
    >
      !
    </div>
  </div>
  <button
    className="root disabled"
    disabled={true}
    onClick={[Function]}
  >
    Submit
  </button>
</div>
`;

exports[`Storyshots Form Valid 1`] = `
<div
  className="root"
>
  <div
    className="root"
    title="Name"
  >
    <input
      className="field"
      disabled={false}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value="Bob"
    />
  </div>
  <div
    className="root"
    title="Salary"
  >
    <input
      className="field"
      disabled={false}
      onChange={[Function]}
      placeholder="Salary"
      type="text"
      value="50000"
    />
  </div>
  <div
    className="root"
    title="Age"
  >
    <input
      className="field"
      disabled={false}
      onChange={[Function]}
      placeholder="Age"
      type="text"
      value={34}
    />
  </div>
  <button
    className="root"
    disabled={false}
    onClick={[Function]}
  >
    Submit
  </button>
</div>
`;

exports[`Storyshots FormButton Default 1`] = `
<button
  className="root"
  disabled={false}
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots FormButton Disabled 1`] = `
<button
  className="root disabled"
  disabled={true}
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots FormButton Loading 1`] = `
<button
  className="root loading"
  disabled={false}
  onClick={[Function]}
>
  Loading...
</button>
`;

exports[`Storyshots FormField Default 1`] = `
<div
  className="root"
  title="Name"
>
  <input
    className="field"
    disabled={false}
    onChange={[Function]}
    placeholder="Name"
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots FormField Invalid 1`] = `
<div
  className="root"
  title="Name"
>
  <input
    className="field error"
    disabled={false}
    onChange={[Function]}
    placeholder="Name"
    type="text"
    value={1234}
  />
  <div
    className="validationAlert"
    title="Validation error"
  >
    !
  </div>
</div>
`;

exports[`Storyshots FormField Valid 1`] = `
<div
  className="root"
  title="Name"
>
  <input
    className="field"
    disabled={false}
    onChange={[Function]}
    placeholder="Name"
    type="text"
    value="Bob"
  />
</div>
`;

exports[`Storyshots FormNotification Default 1`] = `
<div
  className="root"
>
  Test message
</div>
`;
